# wakeonlan

./: .gitignore  .pylintrc  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  noxfile.py  pyproject.toml  requirements.txt  wakeonlan  wakeonlan.cmd
.github/workflows/: release.yml  test.yml
.tools/: create-release
src/wakeonlan/: __init__.py  __main__.py  autocomplete.ps1  autocomplete.sh  interfaces.py  util.py  wakeonlan.py
tests/: conftest.py  test_cli.py  test_enum_vs_native.py  test_interfaces.py  test_payload.py  test_records.py  test_wakeonlan.py
