# Copyright (c) 2018, Eugene Gershnik
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE.txt file or at
# https://opensource.org/licenses/BSD-3-Clause

[build-system]
requires = [
    "setuptools>=61"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.dynamic]
version = {attr = "wakeonlan.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "eg.wakeonlan"
dynamic = ["version"]
description="Yet another wake-on-lan library"
readme="README.md"
authors= [
    { name = 'Eugene Gershnik', email='gershnik@hotmail.com'}
]
requires-python = ">=3.7"
keywords = ["wakeonlan"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    
    "License :: OSI Approved :: BSD License",
    
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft",
    "Operating System :: POSIX",

    "Environment :: Console",

    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    
    "Topic :: System",
    "Topic :: System :: Networking",

    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",

    "Typing :: Typed"
]

[project.urls]
Homepage = 'https://github.com/gershnik/wakeonlan'


[project.scripts]
wakeonlan = "wakeonlan.wakeonlan:main"

